[tool.poetry]
name = "climatechangenlp"
version = "0.1.0"
description = ""
authors = ["Cipri"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.14.1"
pandas = "^2.2.2"
spacy = "^3.8.0"
nltk = "^3.9.1"
matplotlib = "^3.9.2"
wordcloud = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
